feat(ui,session,docs): enhance UI window frame controller, session serialization, theme, docs assets, and tests